<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home_purple_24"
        android:title="@string/bottom_nav_txt_01" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_baseline_groups_purple_24"
        android:title="@string/bottom_nav_txt_02" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_baseline_favorite_purple_24"
        android:title="@string/favorite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_purple_24"
        android:title="@string/bottom_nav_txt_03" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_purple_24"
        android:title="@string/bottom_nav_txt_04" />
</menu>