<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/FragmentLayout.WithSearchBar"
    tools:context=".view.fragments.HomeFragment">

    <com.faltenreich.skeletonlayout.SkeletonLayout
        android:id="@+id/skeletonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@drawable/github_logo_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/github_logo_img" />

            <!--Home Shortcut Menu Part-->
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="32dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_50"
                    android:padding="20dp">

                    <TextView
                        android:id="@+id/textView10"
                        style="@style/HomeTitleTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_work"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView4"
                        style="@style/PopularDetailImg"
                        android:layout_marginTop="16dp"
                        android:background="@color/red"
                        android:src="@drawable/ic_baseline_warning_white_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"
                        app:layout_constraintWidth_percent="0.1"
                        android:contentDescription="@string/white_issue_icon" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/PopularDetailText"
                        android:layout_marginTop="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/issues"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView10"
                        app:layout_constraintWidth_percent="0.8" />

                    <ImageView
                        android:id="@+id/imageView5"
                        style="@style/PopularDetailImg"
                        android:layout_marginTop="8dp"
                        android:background="@color/purple_800"
                        android:src="@drawable/ic_baseline_message_white_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView4"
                        app:layout_constraintWidth_percent="0.1"
                        android:contentDescription="@string/white_discus_icon" />

                    <TextView
                        android:id="@+id/textView4"
                        style="@style/PopularDetailText"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/discussions"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:layout_constraintWidth_percent="0.8" />

                    <ImageView
                        android:id="@+id/imageView6"
                        style="@style/PopularDetailImg"
                        android:layout_marginTop="8dp"
                        android:background="@color/grey_900"
                        android:src="@drawable/ic_baseline_book_white_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView5"
                        app:layout_constraintWidth_percent="0.1"
                        android:contentDescription="@string/white_repo_icon" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/PopularDetailText"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/repositories"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView4"
                        app:layout_constraintWidth_percent="0.8" />

                    <ImageView
                        android:id="@+id/imageView7"
                        style="@style/PopularDetailImg"
                        android:layout_marginTop="8dp"
                        android:background="@color/orange_700"
                        android:src="@drawable/ic_baseline_business_white_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView6"
                        app:layout_constraintWidth_percent="0.1"
                        android:contentDescription="@string/white_company_icon" />

                    <TextView
                        android:id="@+id/textView6"
                        style="@style/PopularDetailText"
                        android:layout_marginTop="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/organizations"
                        app:layout_constraintStart_toEndOf="@+id/imageView5"
                        app:layout_constraintTop_toBottomOf="@+id/textView5"
                        app:layout_constraintWidth_percent="0.8" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <!--Charts Part-->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"
                android:layout_marginBottom="32dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white_50"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        style="@style/HomeTitleTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contribution"
                        android:textSize="18sp" />

                    <!-- Progress Bar -->
                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="10dp"
                        android:gravity="center"
                        android:visibility="gone"/>

                    <WebView
                        android:id="@+id/contributor_img"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        tools:ignore="WebViewLayout" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1.5dp"
                        android:layout_marginVertical="10dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        style="@style/HomeTitleTxt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/favorites"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:gravity="center"
                        android:text="@string/favorite_detail"
                        android:textSize="14sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_repositories" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.faltenreich.skeletonlayout.SkeletonLayout>

</ScrollView>