<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:padding="25dp"
    android:background="@drawable/rounded_purple_border_layout"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/popular_repo_avatar"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@color/grey_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popular_repo_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.8"
        android:text="@string/temp_username"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/popular_repo_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popular_repo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/temp_repo_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_repo_avatar" />

    <TextView
        android:id="@+id/popular_repo_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/temp_repo_detail"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_repo_name" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_baseline_star_yellow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_repo_detail"
        android:contentDescription="@string/yellow_star_icon" />

    <TextView
        android:id="@+id/popular_repo_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/temp_number"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/popular_repo_detail" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/popular_repo_category"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:src="@color/blue_900"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popular_repo_favorite"
        app:layout_constraintTop_toBottomOf="@+id/popular_repo_detail" />

    <TextView
        android:id="@+id/popular_repo_category_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/temp_category_name"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/popular_repo_category"
        app:layout_constraintTop_toBottomOf="@+id/popular_repo_detail"
        app:layout_constraintWidth_percent="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>